# review-lens

./: LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
src/review_lens/: __init__.py  cli.py  coerce.py  config.py  diff.py  lenses.py  llm.py  models.py  render.py  reviewer.py  verify.py
src/review_lens/eval/: __init__.py  __main__.py  dataset.py  metrics.py  report.py
src/review_lens/eval/cases/: clean_guard.diff  clean_guard.labels.json  clean_rename.diff  clean_rename.labels.json  missing_test.diff  missing_test.labels.json  n_plus_one.diff  n_plus_one.labels.json  off_by_one.diff  off_by_one.labels.json  sqli.diff  sqli.labels.json
src/review_lens/fixtures/: demo_result.json  sample.diff
tests/: fakes.py  test_cli.py  test_coerce.py  test_diff.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_report.py  test_eval_runner.py  test_llm.py  test_models.py  test_render.py  test_reviewer.py  test_verify.py
