[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-lens"
version = "0.1.0"
description = "A multi-lens, self-verifying LLM code-review agent for your diffs and PRs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ashish Kosana", email = "ashishkosana@gmail.com" }]
keywords = ["code-review", "llm", "agent", "pull-request", "ci", "static-analysis"]
dependencies = [
  "anthropic>=0.40",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
review-lens = "review_lens.cli:main"

[project.urls]
Homepage = "https://github.com/Ashishkosana/review-lens"

[tool.hatch.build.targets.wheel]
packages = ["src/review_lens"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/review_lens"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
